tests/snapshots/examples_fixtures/type_system__failing__121_match_fat_arrow.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/121_match_fat_arrow.flx
== compile ==
failed (parse)
== diagnostics ==
--> compiler error[E034]: UNEXPECTED TOKEN

Expected `->` in match arm, found `=>`. Flux uses `->` not `=>`.

  --> examples/type_system/failing/121_match_fat_arrow.flx:2:25
  |
2 |     let x = match 1 { 0 => 0, _ => 1 }
  |                         ^

Hint:
  Replace `=>` with `->`: `match x { pattern -> body, ... }`


--> compiler error[E034]: UNEXPECTED TOKEN

Expected `->` in match arm, found `=>`. Flux uses `->` not `=>`.

  --> examples/type_system/failing/121_match_fat_arrow.flx:2:33
  |
2 |     let x = match 1 { 0 => 0, _ => 1 }
  |                                 ^

Hint:
  Replace `=>` with `->`: `match x { pattern -> body, ... }`

Found 2 errors.
== stdout ==
<not executed>
